--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   "description": "",
   "dependencies": {
     "@types/validator": "^13.12.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
     "mongoose": "^8.4.3",
+    "morgan": "^1.10.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.8",
     "eslint": "9.x",
     "globals": "^15.6.0",
