--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-errors": "^2.0.0",
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.8",
     "eslint": "9.x",
     "globals": "^15.6.0",
