--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/validator": "^13.12.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -21,6 +22,7 @@
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "uuid": "^10.0.0",
     "validator": "^13.12.0"
   },
